--- a/templates/classified/index.html
+++ b/templates/classified/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Add Toastify JS -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_forward" />
 
 </head>
 
@@ -54,7 +55,9 @@
         <p class="text-center text-xs mb-3">Have you found your soulmate and looking to settle down ? Well here is the
             right place.</p> <br>
             <div class="flex justify-end mb-4">
-                    <a href="{%url 'classified:next_kin'%}" class="btn btn-xs btn-ghost text-blue-500">Next of kin</a>
+                    <a href="{%url 'classified:next_kin'%}" class="btn btn-xs btn-ghost text-blue-500 flex items-center">Go to Next of kin <span class="material-symbols-outlined">
+chevron_forward
+</span></a>
 
             </div>
 
