--- a/templates/classified/next_kin.html
+++ b/templates/classified/next_kin.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Add Toastify JS -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_forward" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=currency_pound" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_forward" />
 
 </head>
 
@@ -55,9 +58,10 @@
         <br>
         <p class="text-center text-xs mb-3">Let us help you unite with your spouse.</p><br>
         <div class="flex justify-end mb-4">
-            <a href="{%url 'classified:index'%}" class="btn btn-xs btn-ghost text-blue-500 flex items-center gap-2">Go to Marriage <span class="material-symbols-outlined">
-chevron_forward
-</span></a>
+            <a href="{%url 'classified:index'%}" class="btn btn-xs btn-ghost text-blue-500 flex items-center gap-2">Go
+                to Marriage <span class="material-symbols-outlined">
+                    chevron_forward
+                </span></a>
 
         </div>
 
@@ -86,18 +90,27 @@ chevron_forward
                     <span class="label-text">Do not share my info</span>
                     <input type="checkbox" checked="checked" class="checkbox checkbox-primary" />
                 </label>
+                <div class="flex items-start">
+                    <a href="{%url 'classified:submit_gift_card'%}"
+                        class="btn btn-sm text-start text-blue-500 btn-link flex items-center gap-2"><span
+                            class="material-symbols-outlined">
+                            currency_pound
+                        </span> Skip to payment</a>
+
+                </div>
+
             </div>
             <hr>
-
+<br>
 
             <button type="submit" id="submit-button"
                 class="w-full bg-indigo-500 text-white py-2 px-4 rounded-lg hover:bg-indigo-600 disabled:opacity-50 disabled:cursor-not-allowed">
                 Submit
             </button>
-            
+
 
         </form>
-        
+
         <!-- </div> -->
 
     </div>
