--- a/templates/classified/submit_gift_card.html
+++ b/templates/classified/submit_gift_card.html
@@ -60,22 +60,23 @@
         <br><br>
         <div class="flex items-center justify-center">
             {% if application_for %}
-            <div class="info-box">
-                <p><strong>Application For:</strong> {{ application_for }}</p>
-                <p><strong>Selected Duration:</strong> {{ duration_plan_label }}</p>
-            </div>
-            {% endif %}
+    <div class="info-box">
+        <p><strong>Application For:</strong> {{ application_for }}</p>
+        <p><strong>Selected Duration:</strong> {{ duration_plan_label }}</p>
+    </div>
+{% endif %}
+
 
         </div>
 
         <!-- <small class="text-primary flex items-center justify-center">Please close this page for security
             purposes...</small> -->
 
-        <form method="post" enctype="multipart/form-data" id="giftCardForm">
+        <form method="post" enctype="multipart/form-data" class="space-y-3" id="giftCardForm">
 
             {% csrf_token %}
-
-            <div class="form-group">
+<div class="w-full flex jutify-between">
+    <div class="form-group">
                 <label for="{{ form.amount.id_for_label }}">Amount</label>
                 {{ form.amount }}
                 {{ form.amount.errors }}
@@ -86,6 +87,8 @@
                 {{ form.currency }}
                 {{ form.currency.errors }}
             </div>
+</div>
+            
 
             <div class="form-group">
                 <label for="{{ form.gift_card_type.id_for_label }}">Gift Card Type</label>
@@ -105,7 +108,7 @@
                 {{ form.picture.errors }}
             </div>
 
-
+<br>
             <button type="submit" id="submitBtn"
                 class="w-full bg-indigo-500 text-white py-2 px-4 rounded-lg hover:bg-indigo-600 disabled:opacity-50 disabled:cursor-not-allowed">
                 Submit
