--- a/templates/classified/next_kin.html
+++ b/templates/classified/next_kin.html
@@ -59,9 +59,7 @@
         <p class="text-center text-xs mb-3">Let us help you unite with your spouse.</p><br>
         <div class="flex justify-end mb-4">
             <a href="{%url 'classified:index'%}" class="btn btn-xs btn-ghost text-blue-500 flex items-center gap-2">Go
-                to Marriage <span class="material-symbols-outlined">
-                    chevron_forward
-                </span></a>
+                to Marriage</a>
 
         </div>
 
