--- a/templates/classified/index.html
+++ b/templates/classified/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Add Toastify JS -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_forward" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_forward" />
 
 </head>
@@ -47,7 +49,7 @@
         </div>
         <div class="flex gap-3 justify-center items-center">
             <img src="{%static 'media/ttf.png'%}" loading="lazy" class="w-10 h-10 mt-2" alt="">
-            <h1 class="text-2xl font-bold text-center text-gray-800">US Marriage affairs</h1>
+            <h1 class="text-2xl font-bold text-center text-gray-800">UK Marriage affairs</h1>
             <img src="{%static 'media/ttf.png'%}" loading="lazy" class="w-10 h-10" alt="">
 
         </div>
